--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1623,7 +1623,7 @@ width: 100%;
   text-align: center;
   width: 100%;
   max-width:600px;
-  height: 300px;
+  height: 100%;
   margin:  auto;
   position: absolute;
  display:flex;
@@ -1661,8 +1661,9 @@ width: 100%;
   text-align: center;
   width: 100%;
   max-width:350px;
-  height: 150px;
-  line-height: 30px;
+  height: 100%;
+  
+ 
 
 }
 
