--- a/frontend/src/components/layout/style.css
+++ b/frontend/src/components/layout/style.css
@@ -279,12 +279,9 @@
     }
   
     .userImage {
-        width: 30px;
-        height: 30px;
-        border-radius: 50%;
-     
-       
-      
+      width: 30px !important;
+      height: 30px !important ;
+      border-radius: 50%;
        
     }
   
