fixed mobile view header

--- a/frontend/src/components/layout/style.css
+++ b/frontend/src/components/layout/style.css
@@ -225,8 +225,8 @@
       }
   
       .userImage {
-        width: 30px;
-        height: 30px;
+        width: 30px !important;
+        height: 30px !important ;
         border-radius: 50%;
         
       
