--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,6 +9,80 @@ body {
 }
 
 
+
+/* This is used for popup*/
+
+button {
+  background-color: skyblue;
+  border: 2px solid black;
+  border-radius: 4px;
+  font-size: 0.9em;
+  padding: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: rgb(6, 74, 100);
+}
+
+#popup-container {
+  /* put in from of all other elements to prevent interaction
+  
+  */
+
+  z-index: 1;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+
+  /* prevent scroll during animation */
+  overflow: hidden;
+}
+
+#popup-box {
+  text-align: center;
+  z-index: 2;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+
+  background-color: white;
+  border: 2px solid black;
+  border-radius: 20px;
+  padding: 20px;
+  animation: slide-up 0.2s ease-in;
+}
+
+#popup-box h2 {
+  margin-top: 0px;
+}
+
+#popup-ok {
+  margin-top: 10px;
+  width: 50%;
+}
+
+/* Animation specific to modal popup, start low end
+high*/
+
+@keyframes slide-up {
+  0% {
+    top: 100%;
+  }
+
+  100% {
+    top: 50%;
+  }
+}
+
+
+/* popup ends here*/
+
+
 /* Homepage css */
 
 .fa-bars {
