--- a/frontend/src/components/layout/style.css
+++ b/frontend/src/components/layout/style.css
@@ -180,6 +180,7 @@
         width: 150px;
         height: 40px;
         margin-left: 10px
+        
     }
     .inputDiv {
         
@@ -228,6 +229,8 @@
         width: 30px !important;
         height: 30px !important ;
         border-radius: 50%;
+        position: relative;
+        right: 5px;
         
       
        
